# amazon-freertos

freertos_kernel/: CMakeLists.txt  tasks.c  timers.c
freertos_kernel/include/: mpu_wrappers.h  portable.h
freertos_kernel/portable/Common/: mpu_wrappers.c
freertos_kernel/portable/GCC/ARM_CM33/non_secure/: port.c  portasm.c  portmacro.h
freertos_kernel/portable/GCC/ARM_CM33_NTZ/non_secure/: port.c  portmacro.h
freertos_kernel/portable/GCC/ARM_CM4F/: port.c  portmacro.h
freertos_kernel/portable/GCC/ARM_CM4F_MPU/: port.c  portmacro.h
lib/FreeRTOS/: CMakeLists.txt  tasks.c  timers.c
lib/FreeRTOS/portable/Common/: mpu_wrappers.c
lib/FreeRTOS/portable/GCC/ARM_CM4F/: port.c  portmacro.h
lib/FreeRTOS/portable/GCC/ARM_CM4F_MPU/: portmacro.h
lib/include/: mpu_prototypes.h
lib/include/private/: mpu_wrappers.h  portable.h
